fixing background error when on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -363,6 +363,9 @@ footer a {
 
 @media only screen and (max-width: 880px) {
 
+	body {
+		background-size: auto 100vh;
+	}
 	.post_container, .binding {
 		width: 75vw;
 	}
